--- a/kana.ipynb
+++ b/kana.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Part I - *Preparing the Data*"
+    "## Part I - Preparing the Data"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Part II - *Training the Model*"
+    "## Part II - Training the Model"
    ]
   },
   {
