load model section

--- a/kana.ipynb
+++ b/kana.ipynb
@@ -450,7 +450,17 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Part II - Training the Model"
+    "## Part II - Training the Model  \n",
+    "If the model is downloaded to the same folder, you can simply load it here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = models.load_model('classifikanation')"
    ]
   },
   {
@@ -731,35 +741,6 @@
     "%tensorboard --logdir=logs --host localhost --port 8088\n",
     "\n",
     "# visit localhost:8088 to explore the model with tensorboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metal device set to: Apple M1\n",
-      "\n",
-      "systemMemory: 8.00 GB\n",
-      "maxCacheSize: 2.67 GB\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-17 17:12:02.746192: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-09-17 17:12:02.747918: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = models.load_model('classifikanation')"
    ]
   },
   {
