modified credit comments

--- a/kana.ipynb
+++ b/kana.ipynb
@@ -769,8 +769,7 @@
     }
    ],
    "source": [
-    "# the following function is adapted from \n",
-    "# Francois Chollet's book Deep Learning with Python\n",
+    "# the following function is adapted from Francois Chollet's book\n",
     "\n",
     "def plot_performance(history):\n",
     "    acc = history.history['acc']\n",
@@ -893,6 +892,8 @@
     }
    ],
    "source": [
+    "# this cell of code is adapted from Francois Chollet's book\n",
+    "\n",
     "max_depth = 12  # 12 layers before flattening\n",
     "\n",
     "out = [layer.output for layer in model.layers[:max_depth]]\n",
@@ -991,8 +992,7 @@
     }
    ],
    "source": [
-    "# the following functions are adapted from \n",
-    "# Francois Chollet's book Deep Learning with Python\n",
+    "# the following functions are adapted from Francois Chollet's book\n",
     "\n",
     "def arr_normalize(array):\n",
     "    assert isinstance(array, np.ndarray)\n",
